[project]
name = "ltcwff"
version = "0.1.0"
description = "Working through Learn to Code with Fantasy Football by Nathan Braun"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "seaborn>=0.13",
    "matplotlib>=3.9",
    "jupyterlab>=4.2",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Pedagogical repo: keep linting friendly while learning.
# E = pycodestyle errors, F = pyflakes (real bugs), I = import sorting
select = ["E", "F", "I"]
ignore = ["E501"]  # long lines are fine in exploratory notebooks/scripts
